--- a/DiffGeoLectureSeries/lecture2.tex
+++ b/DiffGeoLectureSeries/lecture2.tex
@@ -212,7 +212,7 @@ missing a point, which can be parameterized with the curve
 $\gamma(t) = (\cos t, \sin t))$
 \end{exer}
 %
-\section{Differential Forms and Integration on Manifolds}
+\section{Differential Forms}
 %
 The central idea behind integration is \emph{volume}. If you think about your
 calculus classes (especially vector calculus), you recall that the things
@@ -324,7 +324,8 @@ form where $(\omega \wedge \eta)_p = \omega_p \wedge \eta_p$. Note that for loca
 coordinates $(x^i)$, any $k$-form can be written locally in the form
 $\omega = \sum_I \omega_I dx^{i_1} \wedge \ldots \wedge dx^{i_k}$, where the
 sums is over all increasing sequences $I = (i_1, \ldots i_k)$ with
-$1 \leq i_1 < \ldots < i_k \leq \dim M$.
+$1 \leq i_1 < \ldots < i_k \leq \dim M$. In the case that $\omega$ is a
+$\dim M$-form, we call it a \ib{top degree form}.
 \end{defn}
 %
 Like how covector fields ($1$-forms) were integrated over curves, $k$-forms
@@ -343,4 +344,19 @@ how to do the computations.
     \sum_I (\omega_I \circ F) d(y^{i_1} \circ F) \wedge \ldots \wedge d(y^{i_k}\circ F)$$
   \end{enumerate}
 \end{prop}
+%
+Using this, there's a simple way to express the pullback ofa top degree form.
+Let $F: M \to N$, for smooth $n$-manifolds $M$ and $N$.
+with coordinates $(x^i)$ for $M$ and $(y^i)$ for $N$. Then
+let $\omega = u dy^1 \wedge \cdots \wedge xy^n$ be a top degree form for $N$
+for some smooth functions $u : N \to \R$. Then
+$$F^*\omega = (u \circ F)(\det DF)dx^1 \wedge \ldots  dx^n$$
+where $DF$ is the jacobian of the coordinate representation of $F$.
+This should look familiar, it's the change of coordinates formula in
+multivariable calculus! This means that differential forms transform in
+exactly the right manny for integration, as they encapsulate how parallelopipeds
+transform by the determinant of the derivative.
+%TODO Exterior derivative + Stokes Theorem + relationship with grad/curl
+%Some integral computations?
+
 %
