--- a/DiffGeoLectureSeries/lecture2.tex
+++ b/DiffGeoLectureSeries/lecture2.tex
@@ -1,7 +1,7 @@
 %
 \section{Multilinear Algebra}
 %
-Tensors fields will play an important role in thr study of manifolds, so
+Tensors fields will play an important role in the study of manifolds, so
 it's important to see the linear model first. In this way. we can see how
 to transport knowledge of the linear case to the nonlinear case of
 manifolds. As it turns out, tensors are the proper way the think about
@@ -218,16 +218,16 @@ The central idea behind integration is \emph{volume}. If you think about your
 calculus classes (especially vector calculus), you recall that the things
 you integrate tend to be infinitesimal areas or volumes, and you might have
 thought of the formal symbols $dA$ and $dx~dy$ as symbols representing
-tiny squares or parallelogram, and you probably think of $dt$ as an
+tiny squares or parallelograms, and you probably think of $dt$ as an
 infinitesimal line segment. Therefore, it's in our best interest to
 understand a general framework for volume. You've probablty encountered
 the determinant of a matrix before, and you might have seen that it computes
 the volume of the parallelopiped spanned by the columns of the matrix. This
 will be the prototypical ``volume function" we will work with. There are
 several properties of determinants that make them ideal ``volume functions,"
-and there are some properties we should keep in mind.  \\
+and we should keep these in mind when discussing volume.  \\
 
-Firstly, the determinant is multilinear, much like how the volumes of
+First, the determinant is multilinear, much like how the volumes of
 parelleopipieds change when we add or scale vectors. Secondly, the determinant
 evaluates to $0$ on any linearly dependent set of vectors, which should be
 intuitive, since we are missing a dimension for our parallelopiped. A
