--- a/DiffGeoLectureSeries/lecture2.tex
+++ b/DiffGeoLectureSeries/lecture2.tex
@@ -267,7 +267,7 @@ We'll first lay out the rules for the wedge product.
   \item For $\omega \in \Lambda^k(V^*)$
   and $\eta \in \Lambda^\ell(V^*)$, we have that
   $\omega \wedge \eta \in \Lambda^{k + \ell}(V^*)$
-  \item The wedge product is anticommutative, (sometimew called supercommutative
+  \item The wedge product is anticommutative, (sometimes called supercommutative
   if you are familiar with superalgebras) i.e. for $\omega \in \Lambda^k(V^*)$
   and $\eta \in \Lambda^\ell(V^*)$, we have that
   $\omega \wedge \eta = (-1)^{k\ell}\eta \wedge \omega$. In particular,
